--- a/packages/gatsby-theme-portal/src/search/search.mobile.css
+++ b/packages/gatsby-theme-portal/src/search/search.mobile.css
@@ -6,7 +6,7 @@
     border-radius: 16px;
     left: 0;
     max-width: initial;
-    padding-bottom: 4rem;
+    padding-bottom: 8rem;
     position: fixed;
     top: 0;
     transform: translateY(120vh);
@@ -46,7 +46,8 @@
 
   .filtering .container-filters {
     position: absolute;
-    transform: translateY(4rem);
+    transform: translateY(3rem);
+    z-index: 2;
   }
 
   .filtering .container-filters-footer {
@@ -110,6 +111,7 @@
     left: 50%;
     min-height: 40px;
     min-width: 112px;
+    z-index: 2;
     position: fixed;
     transform: translateX(-50%);
   }
